Add new resolve

--- a/pants.toml
+++ b/pants.toml
@@ -4,7 +4,7 @@
 [GLOBAL]
 pants_version = "2.20.0"
 backend_packages.add = [
-  "pants.backend.build_files.fmt.black",  
+  "pants.backend.build_files.fmt.black",
   "pants.backend.python",
   "pants.backend.python.lint.docformatter",
   "pants.backend.python.lint.black",
@@ -36,7 +36,9 @@ interpreter_constraints = ["==3.9.*"]
 # `generate-lockfiles` goal for Pants to generate the lockfile for you.
 enable_resolves = true
 
-resolves = { python-default = "python-default.lock"}
+[python.resolves]
+python-default = "python-default.lock"
+python-other = "python-other.lock"
 
 [python-bootstrap]
 # We search for interpreters both on the $PATH and in the `$(pyenv root)/versions` folder.
